--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
@@ -7,61 +8,73 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
-    android:id="@+id/buttonGroup">
+    >
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Spotify Streamer"
-        android:id="@+id/spotify_streamer_btn"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <Button
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Football Scores App"
-        android:id="@+id/football_scores_btn"
-        android:layout_below="@+id/library_btn"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Build It Bigger"
-        android:id="@+id/build_it_bigger_btn"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/xyz_reader_btn"
-        android:layout_alignParentLeft="true" />
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonGroup"  >
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="XYZ Reader"
-        android:id="@+id/xyz_reader_btn"
-        android:layout_below="@+id/football_scores_btn"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/spotify_streamer_btn"
+            android:id="@+id/spotify_streamer_btn"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Capstone: My own App"
-        android:id="@+id/capstone_btn"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/build_it_bigger_btn"
-        android:layout_alignParentLeft="true" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/football_scores_btn"
+            android:id="@+id/football_scores_btn"
+            android:layout_below="@+id/library_btn"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Library App"
-        android:id="@+id/library_btn"
-        android:layout_below="@+id/spotify_streamer_btn"
-        android:layout_centerHorizontal="true" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/build_it_bigger_btn"
+            android:id="@+id/build_it_bigger_btn"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/xyz_reader_btn"
+            android:layout_alignParentLeft="true" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/xyz_reader_btn"
+            android:id="@+id/xyz_reader_btn"
+            android:layout_below="@+id/football_scores_btn"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/capstone_btn"
+            android:id="@+id/capstone_btn"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/build_it_bigger_btn"
+            android:layout_alignParentLeft="true" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/library_btn"
+            android:id="@+id/library_btn"
+            android:layout_below="@+id/spotify_streamer_btn"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
+    </ScrollView>
+
 </RelativeLayout>
